--- a/app/package.json
+++ b/app/package.json
@@ -23,7 +23,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
-    "xlsx": "^0.18.5"
+    "exceljs": "^4.4.0"
   },
   "keywords": [],
   "devDependencies": {
