--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,11 @@ node_modules/
 .env
 **/.env
 
-/package-lock.json
-
 dist/
 **/dist/
 
-app/data/
-app/data/**/*
+data/
+data/**/*
 
 logs/
 *.log
